# ILI9341-STM32F103C8

./: .gitignore  .mxproject  CMakeLists.txt  README.md  f103c8.ioc
Inc/: fonts.h  ili9341.h  main.h  stm32f1xx_it.h  testimage.h  xpt2046.h
Src/: fonts.c  ili9341.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  xpt2046.c
cmake/stm32cubemx/: CMakeLists.txt
